--- a/view/home.html
+++ b/view/home.html
@@ -1,7 +1,14 @@
-<div class=homeBackground>
-
 <nav-Dir></nav-Dir>
+<div class=homeBackground>
+  <div class=homeSpace>
+  </div>
 
 
-
-</div> 
+<h1 class=homeTitle>Home</h1>
+<p> Why are you on this page? There is really nothing here at all just text taking up space, for no reason really.
+  just to make it look a little more perty.  I mean to be honest the only reason there is a home page in the first
+  place is because making a 3rd route just gives me another point, 7 points are needed...
+  so yeah of course I made a home page but like stated previously there is nothing here, so leave already stop looking
+  at this page you will get nothing out of it. 
+  </p>
+</div>
