--- a/view/navBar.html
+++ b/view/navBar.html
@@ -6,7 +6,7 @@
       <div>
       </div>
 
-    <button class=button2 ui-sref="about">Api</button>
+    <button class=button2 ui-sref="about">yeah... nothing here, go ahead click it</button>
       <div>
       </div>
 
