--- a/view/view3.html
+++ b/view/view3.html
@@ -1,1 +1,22 @@
 <nav-Dir></nav-Dir>
+<div class=cssPage>
+
+<div class=cssBox>
+  <div class=animation1>
+    <h3> Trying out some css animations </h3>
+
+  </div>
+  <div class=animation2>
+    <div class=movingBox>
+    </div> 
+  </div>
+  <div class=animation3>
+  </div>
+  <div class=animation4>
+  </div>
+
+</div>
+
+
+
+</div>
